removing install from CMakeLists.txt for target sup-c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(sup-c)
 file(GLOB_RECURSE src/*.c)
 add_executable(sup-c ${src_files})
 target_link_libraries(sup-c)
-install(TARGETS sup-c RUNTIME DESTINATION usr/bin)
+#install(TARGETS sup-c RUNTIME DESTINATION usr/bin)
