Modifications to CMakeLists.txt - changing target name to adb-player

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
-project(sup-c)
-file(GLOB_RECURSE src/*.c)
-add_executable(sup-c ${src_files})
-target_link_libraries(sup-c)
+project(adb-player)
+file(GLOB SOURCES src/*.c)
+add_executable(adb-player ${SOURCES})
+target_link_libraries(adb-player)
 #install(TARGETS sup-c RUNTIME DESTINATION usr/bin)
