mod related to adb-player name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(adb-player)
 file(GLOB SOURCES src/*.c)
 add_executable(adb-player ${SOURCES})
 target_link_libraries(adb-player)
-#install(TARGETS sup-c RUNTIME DESTINATION usr/bin)
+install(TARGETS adb-player RUNTIME DESTINATION /usr/bin)
